--- a/IcosahedronGame.ipynb
+++ b/IcosahedronGame.ipynb
@@ -29,7 +29,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Look up what’s an icosahedron: https://en.wikipedia.org/wiki/Icosahedron It has 20 sides (each of which is an equilateral triangle). Suppose you have an icosahedraldie with the numbers 1, 2, 3, . . . , 20 printed on its sides. If you roll such a die then it will rest on a unique triangle that is facing down, and that triangle has a unique triangle which is the opposite face–the one facing up, the number on that triangle facing up is taken for the number showing up for that roll. Two players play a game like this: \n",
+        "An Icosahedron has 20 sides (each of which is an equilateral triangle). Suppose you have an icosahedraldie with the numbers 1, 2, 3, . . . , 20 printed on its sides. If you roll such a die then it will rest on a unique triangle that is facing down, and that triangle has a unique triangle which is the opposite face–the one facing up, the number on that triangle facing up is taken for the number showing up for that roll. Two players play a game like this: \n",
         "- (1) Player A rolls the die 10 times, and computes the sum of all the 10 numbers that show up.\n",
         "- (2) Player B rolls the die 10 times, and computes the sum of all the 10 numbers that show up. \n",
         "\n",
