--- a/IcosahedronGame.ipynb
+++ b/IcosahedronGame.ipynb
@@ -33,7 +33,7 @@
         "- (1) Player A rolls the die 10 times, and computes the sum of all the 10 numbers that show up.\n",
         "- (2) Player B rolls the die 10 times, and computes the sum of all the 10 numbers that show up. \n",
         "\n",
-        "Whichever player gets the higher sum is the winner. In case of a tie (the sums are equal),then they play again. Write a Python code to simulate this game."
+        "Whichever player gets the higher sum is the winner. In case of a tie (the sums are equal),then they play again."
       ],
       "metadata": {
         "id": "QGrhGJNz_FyS"
